--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "share-drop",
+  "name": "FlyMyFile",
   "version": "1.0.0",
-  "description": "P2P file sharing",
+  "description": "PureJS Peer2Peer file sharing",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cowbell/sharedrop.git"
+    "url": "https://github.com/webmasteradmin/FlyMyFile.git"
   },
   "main": "index.js",
   "scripts": {
